base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: invoiceninja
  name: invoiceninja
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: invoiceninja
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: invoiceninja
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: app
        image: invoiceninja/invoiceninja:5
        imagePullPolicy: IfNotPresent
        resources: {}
        volumeMounts:
        - mountPath: /usr/local/bin/shutdown.sh
          name: config-files
          subPath: shutdown.sh
        - mountPath: /var/www/app/storage
          name: invoiceninja
          subPath: storage
        - mountPath: /var/www/app/public
          name: invoiceninja
          subPath: public
      - name: web
        image: nginx:alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            memory: 128Mi
            cpu: 500m
          limits:
            memory: 250Mi
            cpu: 1000m
        volumeMounts:
        - mountPath: /var/www/app/storage
          name: invoiceninja
          subPath: storage
        - mountPath: /var/www/app/public
          name: invoiceninja
          subPath: public
        - mountPath: /etc/nginx/conf.d/in-vhost.conf
          name: config-files
          subPath: in-vhost.conf
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: invoiceninja
        persistentVolumeClaim:
          claimName: invoiceninja5-nfs
      - configMap:
          defaultMode: 256
          name: config-files
          optional: false
        name: config-files
