base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # define issuer for cert-manager to be able to request certificate
    cert-manager.io/cluster-issuer: le-prod
  name: invoiceninja
spec:
  rules:
  - host: racuni.zuraj.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: invoiceninja
            port:
              name: http
  tls:
  - hosts:
    - racuni.zuraj.com
    secretName: racuni.zuraj.com-cert
